# modrinth-downloader

./: .gitignore  CHANGELOG.md  README.md  example.csv  example.env  pyproject.toml
.github/workflows/: python.yml
app/: __init__.py  __main__.py  constants.py  enums.py  models.py  modrinth.py  utils.py  validators.py
modrinth/: __init__.py  api.py  models.py  utils.py
tui/: __main__.py  models.py
