[tool.poetry]
name = "modrinth-downloader"
version = "1.0.0"
description = ""
authors = ["Tomasz Kordiak <dotomika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
progress = "^1.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
mypy = "^1.5.1"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = [".mypy_cache", ".venv", ".vscode", "__pycache__", "poetry.lock"]
