[tool.poetry]
name = "modrinth-downloader"
version = "0.1.0"
description = ""
authors = ["Tomasz Kordiak <dotomika@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

httpx = "^0.27.2"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "S", "F", "RUF"]
ignore = ["S301"]
